groupChat api test
