# api.yaml
@@ -258,6 +258,14 @@ paths:
       responses:
         '200':
           description: successful
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  chatId:
+                    type: number
+                    description: the id of the new groupChat
         '403':
           $ref: '#components/responses/NotAllowed'
         '500':
@@ -283,7 +291,6 @@ paths:
               schema:
                 type: object
                 properties:
-                  #TODO define type
                   type:
                     type: string
                     description: the type of the chat
@@ -357,8 +364,16 @@ paths:
           schema:
             type: integer
             description: the id of the chat
+        - name: data
+          in: header
+          required: true
+          schema:
+            type: object
+            properties:
+              chatName:
+                type: string
+                description: the new name of the chat
       responses:
-        # TODO response
         '200':
           description: successful
         '403':
@@ -380,8 +395,16 @@ paths:
           schema:
             type: integer
             description: the id of the chat
+        - name: data
+          in: header
+          required: true
+          schema:
+            type: object
+            properties:
+              description:
+                type: string
+                description: the new description of the chat
       responses:
-        # TODO response
         '200':
           description: successful
         '403':
@@ -410,7 +433,6 @@ paths:
             type: integer
             description: the id of the user who should be added
       responses:
-        # TODO response
         '200':
           description: successful
         '403':
@@ -419,7 +441,7 @@ paths:
           description: internal server error
     delete:
       description: |
-        a new member gets removed from the group
+        a member gets removed from the group
         requesting user has to be admin
       summary: remove a member from a groupChat
       operationId: removeMemberFromGroupChat
@@ -438,7 +460,6 @@ paths:
             type: integer
             description: the id of the user who should be added
       responses:
-        # TODO response
         '200':
           description: successful
         '403':
@@ -476,7 +497,6 @@ paths:
                     type: string
                     description: the username of the user
       responses:
-        # TODO response
         '200':
           description: successful
         '403':
@@ -505,7 +525,6 @@ paths:
             type: integer
             description: the id of the user who should be added
       responses:
-        # TODO response
         '200':
           description: successful
         '403':
@@ -534,7 +553,6 @@ paths:
             type: integer
             description: the id of the user who should be added
       responses:
-        # TODO response
         '200':
           description: successful
         '403':
@@ -555,7 +573,6 @@ paths:
             type: integer
             description: the id of the chat
       responses:
-        # TODO response
         '200':
           description: successful
         '403':
@@ -563,7 +580,27 @@ paths:
         '500':
           description: internal server error
   /group/:gcid/leave:
-    #TODO
+    post:
+      description: |
+        the requesting user leaves the chat
+        if admin, there has to be at least one admin left after this action
+      summary: user takes away admin rights himself
+      operationId: removeAdminSelf
+      parameters:
+        - $ref: '#components/securitySchemes/authorization'
+        - name: gcid
+          in: path
+          required: true
+          schema:
+            type: integer
+            description: the id of the chat
+      responses:
+        '200':
+          description: successful
+        '403':
+          $ref: '#components/responses/NotAllowed'
+        '500':
+          description: internal server error
   /group/:gcid/removeAdmin:
     post:
       description: |
@@ -581,7 +618,6 @@ paths:
             type: integer
             description: the id of the chat
       responses:
-        # TODO response
         '200':
           description: successful
         '403':
